# Praxis

./: .gitignore  HT.sql  Hypertension.sql  README.md  clone_temp.ts  docker-compose.yml  dockerfile  dqm(hb1ac).sql  dqm(ht).sql  filebeat.yml  hbaqc.sql  k8s-config.yaml  package-lock.json  package.json  prometheus.yml  pyproject.toml  readme.md  refining_temp.ts
Backend/: .gitignore  package.json
Backend/prisma/: schema.prisma
Frontend/: .gitignore  package-lock.json  package.json
js-mongo-template/: dockerfile  package-lock.json  package.json  prometheus.yml
js-mongo-template/src/: server.js
js-next-mongo-template/Backend/: ecosystem.config.cjs  package.json
js-next-mongo-template/Frontend/: package.json  tailwind.config.mjs
js-next-postgres-template/Backend/: package-lock.json
js-next-postgres-template/Frontend/: next.config.mjs  package-lock.json  package.json
js-next-template/: README.md  package-lock.json  package.json  tailwind.config.mjs
js-next-template/src/: .env.local
js-postgres-template/: package-lock.json  package.json
js-postgres-template/prisma/: schema.prisma
js-postgres-template/src/: server.js
js-vite-mongo-template/Backend/: docker-compose.yml
js-vite-mongo-template/Frontend/: README.md  package-lock.json  package.json  tailwind.config.js
js-vite-postgres-template/Frontend/: package.json  vite.config.js
js-vite-template/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
js-vite-template/src/: main.jsx
nginx/: nginx.conf
pro_wrapper /: tailwind.config.ts
pro_wrapper /app/: layout.tsx  page.tsx
pro_wrapper /components/: cta.tsx  faq.tsx  feature.tsx  hero.tsx  logo.tsx  navbar.tsx  pricing.tsx
scripts/: delete-k8s.sh  deploy-k8s.sh  setup_elk.sh  startapp.sh
src/: index.ts
src/api/: admin.py  apps.py  models.py  serializers.py  tips.md  urls.py  views.py
src/authentication/: admin.py  managers.py  middleware.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/controllers/: cancelOperation.ts  cloneRepo.ts  ending.ts  errorHandling.ts  nextSteps.ts  refining.ts  runCommand.ts  user_touch.ts
src/core/: celery.py  settings.py  urls.py  views.py
src/prompts/: projectType.ts
ts-mongo-template/: .env  package-lock.json  package.json  tsconfig.json
ts-next-template/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
ts-postgres-template/: .env  README.MD  ecosystem.config.js  package-lock.json  package.json
ts-vite-template/: .env.local  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ts-vitte-template/: package-lock.json
wrapper/: package-lock.json  package.json  tsconfig.json
(+1046 files in other folders)
